chore: Updated classifier

--- a/yelp_review_classification/preprocessing/classify_reviews_mood.ipynb
+++ b/yelp_review_classification/preprocessing/classify_reviews_mood.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,13 +257,23 @@
       "2  adventurous              0.082479     0.227193    0.049585    0.114050   \n",
       "3    indulgent              0.577350     0.149511    0.075622    0.113550   \n",
       "4      festive             -0.577350     0.163996    0.038021    0.050737   \n",
+      "5         cozy              0.577350     0.098126    0.028156    0.086222   \n",
+      "6    indulgent              0.577350     0.109151    0.088086    0.099838   \n",
+      "7  adventurous              0.577350     0.239649    0.086354    0.082006   \n",
+      "8    indulgent              0.412393     0.102557    0.055029    0.041562   \n",
+      "9         cozy              0.412393     0.132290    0.035886    0.040191   \n",
       "\n",
       "   romantic      cozy   festive  indulgent  refreshing human_scored_mood  \n",
       "0  0.051065  0.208144  0.225149   0.280261    0.029452         indulgent  \n",
       "1  0.042849  0.230095  0.130889   0.165506    0.102941              cozy  \n",
       "2  0.072648  0.224918  0.097729   0.200360    0.117214        refreshing  \n",
       "3  0.078758  0.139143  0.164757   0.293226    0.094920         indulgent  \n",
-      "4  0.065152  0.164367  0.172096   0.147435    0.095951        comforting  \n"
+      "4  0.065152  0.164367  0.172096   0.147435    0.095951        comforting  \n",
+      "5  0.127623  0.272863  0.151670   0.160978    0.029564              cozy  \n",
+      "6  0.057880  0.151670  0.185266   0.271535    0.079398         indulgent  \n",
+      "7  0.117121  0.168548  0.153039   0.233048    0.050777       adventurous  \n",
+      "8  0.098690  0.088139  0.107822   0.134446    0.058389           festive  \n",
+      "9  0.090875  0.190605  0.170686   0.171740   -0.001242         indulgent  \n"
      ]
     }
    ],
@@ -402,7 +412,7 @@
     "\n",
     "# Print first 5 rows\n",
     "print(\"*****Similarity_Scores_DF\")\n",
-    "print(review_scores_df.head())\n",
+    "print(review_scores_df.head(10))\n",
     "\n",
     "# Stored as Github Release: Save only similarity scores to a separate file\n",
     "# scores_output_path = \"./Resources/review_mood_similarity_scores.parquet\"\n",
