chore: Cleaned the folder structure

--- a/Complete Notebook.ipynb
+++ b/Complete Notebook.ipynb
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Device set to use cpu\n"
+      "Device set to use mps:0\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
     "# --- Model Setup ---\n",
     "embedder = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
     "classifier = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\")\n",
-    "genai.configure(api_key=\"ENTER API KEY HERE\")"
+    "genai.configure(api_key=\"AIzaSyBHn7xZshvAeFe5ZBLV-30OyZIbSwb9BLE\")"
    ]
   },
   {
@@ -199,7 +199,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scoring reviews: 100%|██████████| 10/10 [01:20<00:00,  8.05s/it]\n"
+      "Scoring reviews: 100%|██████████| 10/10 [00:12<00:00,  1.23s/it]\n",
+      "/var/folders/91/rg0gdxsx0f9chfhd7ktt567m0000gn/T/ipykernel_17411/1548275336.py:30: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  .apply(average_mood_scores)\n"
      ]
     }
    ],
@@ -207,8 +209,8 @@
     "# --- Load Finalized Model (zero-shot) with Caching ---\n",
     "def load_final_model_data():\n",
     "    global business_df\n",
-    "    business_df = pd.read_parquet(\"../Data/filtered_restaurants_businesses.parquet\")\n",
-    "    review_df = pd.read_parquet(\"../Data/filtered_restaurants_reviews.parquet\")\n",
+    "    business_df = pd.read_parquet(\"Data/filtered_restaurants_businesses.parquet\")\n",
+    "    review_df = pd.read_parquet(\"Data/filtered_restaurants_reviews.parquet\")\n",
     "    sample_reviews = review_df.sample(n=10, random_state=42).reset_index(drop=True)\n",
     "\n",
     "    mood_scores = []\n",
@@ -297,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +428,7 @@
      "output_type": "stream",
      "text": [
       "✅ Loading precomputed mood_by_business from cache...\n",
-      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -434,7 +436,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -447,66 +449,9 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: Laser Wolf\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: Laser Wolf\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: Laser Wolf\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: R&D\n",
-      "🪵 Gemini raw text:\n",
-      " ```json\n",
-      "{\n",
-      "  \"phone\": \"(215) 386-1177\",\n",
-      "  \"address\": \"1144 S 11th St, Philadelphia, PA 19147\",\n",
-      "  \"summary\": \"R&D is a trendy cocktail bar in South Philadelphia known for its creative and expertly crafted cocktails, as well as its delicious Southeast Asian-inspired bar snacks.\",\n",
-      "  \"moods\": \"trendy, hip, lively, intimate\",\n",
-      "  \"highlight\": \"Known for its unique and innovative cocktail program and Southeast Asian-inspired bites.\"\n",
-      "}\n",
-      "```\n",
-      "📦 Gemini returned clean structured info.\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: Laser Wolf\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: Laser Wolf\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: R&D\n",
-      "🪵 Gemini raw text:\n",
-      " ```json\n",
-      "{\n",
-      "  \"phone\": \"(215) 386-1177\",\n",
-      "  \"address\": \"1201 Locust St, Philadelphia, PA 19107\",\n",
-      "  \"summary\": \"R&D is a stylish cocktail bar in Philadelphia known for its innovative and experimental drinks, often featuring unusual ingredients and techniques. They also offer a curated selection of snacks and small plates to complement the cocktails.\",\n",
-      "  \"moods\": \"trendy, sophisticated, intimate, lively\",\n",
-      "  \"highlight\": \"known for its creative and experimental cocktails\"\n",
-      "}\n",
-      "```\n",
-      "📦 Gemini returned clean structured info.\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: Laser Wolf\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: R&D\n",
-      "🪵 Gemini raw text:\n",
-      " ```json\n",
-      "{\n",
-      "  \"phone\": \"(215) 386-5300\",\n",
-      "  \"address\": \"1201 N Delaware Ave, Philadelphia, PA 19125\",\n",
-      "  \"summary\": \"R&D is a modern American restaurant located in Fishtown, Philadelphia.  It offers a seasonal menu with wood-fired dishes and a focus on local ingredients. The atmosphere is described as industrial-chic and lively.\",\n",
-      "  \"moods\": \"casual, trendy, lively, group-friendly\",\n",
-      "  \"highlight\": \"known for its wood-fired grill and extensive beer list\"\n",
-      "}\n",
-      "```\n",
-      "📦 Gemini returned clean structured info.\n"
-     ]
     }
    ],
    "source": [
@@ -515,14 +460,14 @@
     "# --- UI creation ---\n",
     "# --- Local image paths for moods ---\n",
     "mood_images = {\n",
-    "    \"adventurous\": \"../Pictures/adventurous.png\",\n",
-    "    \"comforting\":  \"../Pictures/comforting.png\",\n",
-    "    \"cozy\":        \"../Pictures/cozy.png\",\n",
-    "    \"energizing\":  \"../Pictures/energizing.png\",\n",
-    "    \"festive\":     \"../Pictures/festive.png\",\n",
-    "    \"indulgent\":   \"../Pictures/indulgent.png\",\n",
-    "    \"refreshing\":  \"../Pictures/refreshing.png\",\n",
-    "    \"romantic\":    \"../Pictures/romantic.png\",\n",
+    "    \"adventurous\": \"Pictures/adventurous.png\",\n",
+    "    \"comforting\":  \"Pictures/comforting.png\",\n",
+    "    \"cozy\":        \"Pictures/cozy.png\",\n",
+    "    \"energizing\":  \"Pictures/energizing.png\",\n",
+    "    \"festive\":     \"Pictures/festive.png\",\n",
+    "    \"indulgent\":   \"Pictures/indulgent.png\",\n",
+    "    \"refreshing\":  \"Pictures/refreshing.png\",\n",
+    "    \"romantic\":    \"Pictures/romantic.png\",\n",
     "}\n",
     "\n",
     "# --- Map image path back to mood ---\n",
@@ -590,9 +535,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Evaluation Results:\n",
+      "\n",
+      "Review 1: The dim lighting and soft music made it perfect for a date night.\n",
+      "  True Mood        : romantic\n",
+      "  Zero-Shot Predict: cozy\n",
+      "  Embedding Predict: romantic\n",
+      "\n",
+      "Review 2: After a long day, this place just felt like a warm hug.\n",
+      "  True Mood        : comforting\n",
+      "  Zero-Shot Predict: cozy\n",
+      "  Embedding Predict: comforting\n",
+      "\n",
+      "Review 3: Every dish had a spicy kick—totally fired me up!\n",
+      "  True Mood        : energizing\n",
+      "  Zero-Shot Predict: energizing\n",
+      "  Embedding Predict: festive\n",
+      "\n",
+      "Review 4: We wore sweaters, had hot chocolate, and watched the snowfall from inside.\n",
+      "  True Mood        : cozy\n",
+      "  Zero-Shot Predict: cozy\n",
+      "  Embedding Predict: cozy\n",
+      "\n",
+      "Review 5: Twinkling lights and Christmas songs everywhere—like a holiday dream.\n",
+      "  True Mood        : festive\n",
+      "  Zero-Shot Predict: festive\n",
+      "  Embedding Predict: festive\n",
+      "\n",
+      "Review 6: The desserts were over-the-top and totally worth every bite.\n",
+      "  True Mood        : indulgent\n",
+      "  Zero-Shot Predict: indulgent\n",
+      "  Embedding Predict: indulgent\n",
+      "\n",
+      "Review 7: We hiked first, then found this open-air cafe with mountain views.\n",
+      "  True Mood        : refreshing\n",
+      "  Zero-Shot Predict: cozy\n",
+      "  Embedding Predict: cozy\n",
+      "\n",
+      "Review 8: Live jazz, old-school cocktails, and candlelight—it felt like time travel.\n",
+      "  True Mood        : romantic\n",
+      "  Zero-Shot Predict: festive\n",
+      "  Embedding Predict: cozy\n",
+      "\n",
+      "Review 9: The staff gave warm blankets and tea on a rainy night.\n",
+      "  True Mood        : comforting\n",
+      "  Zero-Shot Predict: cozy\n",
+      "  Embedding Predict: cozy\n",
+      "\n",
+      "Review 10: We danced under the stars after margaritas—total vacation vibes!\n",
+      "  True Mood        : energizing\n",
+      "  Zero-Shot Predict: festive\n",
+      "  Embedding Predict: romantic\n",
+      "\n",
+      "📊 Accuracy Scores\n",
+      "Zero-Shot Model Accuracy    : 0.40\n",
+      "Sentence Embedding Accuracy : 0.50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 21\n",
+      "}\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "from sentence_transformers import SentenceTransformer, util\n",
@@ -662,7 +700,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -676,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
