--- a/Complete Notebook.ipynb
+++ b/Complete Notebook.ipynb
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Device set to use mps:0\n"
+      "Device set to use cpu\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +102,15 @@
     "# --- Gemini Functions ---\n",
     "def get_llm_generated_recommendation(mood):\n",
     "    prompt = f\"\"\"\n",
-    "    A user is feeling {mood}. Recommend one unique, real restaurant in Philadelphia that matches this mood.\n",
-    "    Avoid repeating suggestions like 'Talula's Garden'.\n",
-    "    Only return the restaurant name. Do not include any extra text or commentary.\n",
+    "    You are a foodie expert. A user is feeling **{mood}** and wants a restaurant recommendation in Philadelphia that perfectly matches this mood.\n",
+    "\n",
+    "    Return a unique restaurant name that aligns with the emotion. Rotate recommendations to avoid repetition.\n",
+    "\n",
+    "    Only return the restaurant name — no explanations.\n",
+    "\n",
     "    Session ID: {uuid.uuid4()}\n",
     "    \"\"\".strip()\n",
+    "\n",
     "\n",
     "    try:\n",
     "        model = genai.GenerativeModel(\"gemini-1.5-pro-latest\")\n",
@@ -199,9 +203,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scoring reviews: 100%|██████████| 10/10 [00:12<00:00,  1.23s/it]\n",
-      "/var/folders/91/rg0gdxsx0f9chfhd7ktt567m0000gn/T/ipykernel_17411/1548275336.py:30: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  .apply(average_mood_scores)\n"
+      "Scoring reviews: 100%|██████████| 10/10 [01:22<00:00,  8.23s/it]\n"
      ]
     }
    ],
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +398,6 @@
     "🍽️ {name}\n",
     "📍 Address: {details.address}\n",
     "📝 Summary: {details.summary}\n",
-    "🎯 Moods: {details.moods}\n",
     "✨ Highlight: {details.highlight}\n",
     "    \"\"\".strip()\n",
     "\n",
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -449,9 +450,113 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Talula's Garden\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Talula's Garden\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Talula's Garden\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 32\n",
+      "}\n",
+      "]\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 28\n",
+      "}\n",
+      "]\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 26\n",
+      "}\n",
+      "]\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 24\n",
+      "}\n",
+      "]\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 22\n",
+      "}\n",
+      "]\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 20\n",
+      "}\n",
+      "]\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 19\n",
+      "}\n",
+      "]\n",
+      "🧠 Mood selected: adventurous\n",
+      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
+      "}\n",
+      ", links {\n",
+      "  description: \"Learn more about Gemini API quotas\"\n",
+      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
+      "}\n",
+      ", retry_delay {\n",
+      "  seconds: 53\n",
+      "}\n",
+      "]\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n"
+     ]
     }
    ],
    "source": [
@@ -700,7 +805,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "dev",
    "language": "python",
    "name": "python3"
   },
@@ -714,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
