chore: Updated readme

--- a/Complete Notebook.ipynb
+++ b/Complete Notebook.ipynb
@@ -199,8 +199,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scoring reviews: 100%|██████████| 10/10 [00:06<00:00,  1.49it/s]\n",
-      "/var/folders/91/rg0gdxsx0f9chfhd7ktt567m0000gn/T/ipykernel_22768/1548275336.py:30: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "Scoring reviews: 100%|██████████| 10/10 [00:07<00:00,  1.42it/s]\n",
+      "/var/folders/91/rg0gdxsx0f9chfhd7ktt567m0000gn/T/ipykernel_27790/1548275336.py:30: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(average_mood_scores)\n"
      ]
     }
@@ -396,6 +396,7 @@
     "🍽️ {name}\n",
     "📍 Address: {details.address}\n",
     "📝 Summary: {details.summary}\n",
+    "🎯 Moods: {details.moods}\n",
     "✨ Highlight: {details.highlight}\n",
     "    \"\"\".strip()\n",
     "\n",
@@ -604,38 +605,6 @@
       "📊 Accuracy Scores\n",
       "Zero-Shot Model Accuracy    : 0.40\n",
       "Sentence Embedding Accuracy : 0.50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: R&D\n",
-      "🪵 Gemini raw text:\n",
-      " ```json\n",
-      "{\n",
-      "  \"phone\": \"(215) 383-0700\",\n",
-      "  \"address\": \"1201 N Delaware Ave, Philadelphia, PA 19125\",\n",
-      "  \"summary\": \"R&D is Stephen Starr's innovative and modern American restaurant located in Fishtown. It features a creative, ever-changing menu with dishes meant for sharing, emphasizing seasonal ingredients and global influences.\",\n",
-      "  \"moods\": \"trendy, upscale, lively, social\",\n",
-      "  \"highlight\": \"Known for its creative, shareable plates and its location in the vibrant Fishtown neighborhood.\"\n",
-      "}\n",
-      "```\n",
-      "📦 Gemini returned clean structured info.\n",
-      "🧠 Mood selected: adventurous\n",
-      "✅ Gemini recommended restaurant: Laser Wolf\n",
-      "🧠 Mood selected: adventurous\n",
-      "❌ Gemini recommendation failed: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\n",
-      "}\n",
-      ", links {\n",
-      "  description: \"Learn more about Gemini API quotas\"\n",
-      "  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\n",
-      "}\n",
-      ", retry_delay {\n",
-      "  seconds: 59\n",
-      "}\n",
-      "]\n"
      ]
     }
    ],
