chore: Updated complete notebook

--- a/Complete Notebook.ipynb
+++ b/Complete Notebook.ipynb
@@ -199,8 +199,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scoring reviews: 100%|██████████| 10/10 [00:07<00:00,  1.42it/s]\n",
-      "/var/folders/91/rg0gdxsx0f9chfhd7ktt567m0000gn/T/ipykernel_27790/1548275336.py:30: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "Scoring reviews: 100%|██████████| 10/10 [00:06<00:00,  1.51it/s]\n",
+      "/var/folders/91/rg0gdxsx0f9chfhd7ktt567m0000gn/T/ipykernel_42236/4085492465.py:30: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(average_mood_scores)\n"
      ]
     }
@@ -234,7 +234,7 @@
     "        return {mood: mood_sums[mood] / count for mood in mood_sums}\n",
     "\n",
     "    mood_by_business = (\n",
-    "        sample_reviews.groupby(\"business_id\")\n",
+    "        sample_reviews.groupby(\"business_id\", group_keys=False)\n",
     "        .apply(average_mood_scores)\n",
     "        .reset_index(name=\"aggregated_moods\")\n",
     "    )\n",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -605,6 +605,25 @@
       "📊 Accuracy Scores\n",
       "Zero-Shot Model Accuracy    : 0.40\n",
       "Sentence Embedding Accuracy : 0.50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: R&D\n",
+      "🪵 Gemini raw text:\n",
+      " ```json\n",
+      "{\n",
+      "  \"phone\": \"(215) 386-1911\",\n",
+      "  \"address\": \"1144 S 11th St, Philadelphia, PA 19147\",\n",
+      "  \"summary\": \"R&D is a modern American restaurant known for its creative, seasonally-driven dishes and innovative cocktail program. They focus on shared plates and a lively atmosphere.\",\n",
+      "  \"moods\": \"trendy, lively, casual, social\",\n",
+      "  \"highlight\": \"innovative cocktails and shareable plates\"\n",
+      "}\n",
+      "```\n",
+      "📦 Gemini returned clean structured info.\n"
      ]
     }
    ],
